--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install railpack
+        run: |
+          curl -sSL https://railpack.com/install.sh | sh
+
       - name: Build
         run: |
           make build
