--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9,<4.0"
 
 dependencies = [
-    "fastapi>=0.115.12",
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
     "uvicorn>=0.34.0",
     "fastapi-cache2>=0.2.1",
     "beautifulsoup4>=4.12.0",
